add dynamic campaign builder, routes and update new campaign frontend to build dynamic campaign

--- a/ad_manager/templates/index.html
+++ b/ad_manager/templates/index.html
@@ -42,7 +42,7 @@
                 <ul class="nav-bar">
                         <li class="nav-bar-item"> <a class="nav-link" href="home"> Home</a></li>
                         <li class="nav-bar-item"> <a class="nav-link" href="campaigns"> Get Campaigns</a></li>
-                        <li class="nav-bar-item"> <a class="nav-link" href="new_campaign"> New Campaign</a></li>
+                        <li class="nav-bar-item"> <a class="nav-link" href="dynamic_campaign"> New Dynamic Campaign</a></li>
                 </ul>
         </div>
         <div class="body">
