--- a/ad_manager/templates/new_campaign_form.html
+++ b/ad_manager/templates/new_campaign_form.html
@@ -57,7 +57,7 @@
 		<ul class="nav-bar">
 			<li class="nav-bar-item"> <a class="nav-link" href="home"> Home</a></li>
 			<li class="nav-bar-item"> <a class="nav-link" href="campaigns"> Get Campaigns</a></li>
-			<li class="nav-bar-item"> <a class="nav-link" href="new_campaign"> New Campaign</a></li>
+			<li class="nav-bar-item"> <a class="nav-link" href="dynamic_campaign"> New  Dynamic Campaign</a></li>
 		</ul>
 	</div>
 	<div class="results-header">
@@ -65,10 +65,10 @@
 	</div>
     <div><!-- InstanceBeginEditable name="Body" -->
 		<p>
-		Insert Campaign Name
+		Insert Event Name
 		</p>
-		<form action="http://localhost:5000/api/new-campaign">
-			   	Campaign Name:<br>
+		<form action="http://localhost:5000/api/dynamic-campaign">
+			   	Event Name:<br>
 			   	<input type="string" name="name"><br>
 		  <input style="margin-top: 5px" type="submit" value="Submit">
 		</form>
