--- a/ad_manager/templates/update_target_form.html
+++ b/ad_manager/templates/update_target_form.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Campaigns</title>
+<title>Update Target</title>
 	<style>
 		.nav-bar{
 			list-style-type: none;
@@ -63,63 +63,25 @@
 	<div class="results-header">
 		<h3> Campaigns</h3>
 	</div>
+    <div><!-- InstanceBeginEditable name="Body" -->
+		<p>
+		Insert Event Name
+		</p>
+		<form action="http://localhost:5000/api/update_target">
+            Campaign Id:<br>
+                <input type="string" name="campaignId" ><br>
+            New Target:<br>
+			   	<input type="number" name="target"><br>
+
+		  <input style="margin-top: 5px" type="submit" value="Submit">
+		</form>
+
+		<!-- InstanceEndEditable -->
+
+	</div>
 	<div id="box"></div>
 
 </body>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.js"></script>
-<script type="mustache/x-temp" id="testTemp">
-  {% raw %}
-  <ul>
-  {{#owners}}
-    <div class="owner">
-      <li> {{name}} </li>
-        <ul>
-          <li> Name: {{wins}} </li>
-          <li> Status: {{losses}} </li>
-          <li> ID: {{yearsActive}} </li>
-        </ul
-    </div>
-  {{/owners}}
-  </ul>
-  {% endraw %}
-</script>
-
-<script type="mustache/x-temp" id="tableTemp">
-  <table>
-    <tr>
-      <th> Name </th>
-      <th> Status </th>
-      <th> ID </th>
-      <th> Target </th>
-    </tr>
-  {% raw %}
-  <ul>
-  {{#campaigns}}
-    <tr>
-      <td> {{name}} </td>
-      <td> {{status}} </td>
-      <td> {{id}} </td>
-      <td> {{targetRoas}} </td>
-    </tr>
-  {{/campaigns}}
-  </table>
-  {% endraw %}
-</script>
-
-<script type="text/javascript">
-var requestUrl = 'http://localhost:5000/api/get-campaigns';
-$(function() {
-
-  $.getJSON(requestUrl, function(result){
-    var template = $('#tableTemp').html();
-    var html = Mustache.render(template, result);
-    $('#box').html(html);
-  });
-
-});
-
-</script>
 
 </html>
