--- a/ad_manager/templates/update_target_form.html
+++ b/ad_manager/templates/update_target_form.html
@@ -51,7 +51,7 @@
 
 <body>
 	<div>
-		<h2 class="header"> Keenan's Ads App</h2>
+		<h2 class="header"> Ads App</h2>
 	</div>
 	<div>
 		<ul class="nav-bar">
