update links in templates and add index route

--- a/ad_manager/templates/campaigns.html
+++ b/ad_manager/templates/campaigns.html
@@ -109,7 +109,7 @@
 </script>
 
 <script type="text/javascript">
-var requestUrl = 'http://localhost:5000/api/get-campaigns';
+var requestUrl = 'https://fast-refuge-34078.herokuapp.com/api/get-campaigns';
 $(function() {
 
   $.getJSON(requestUrl, function(result){
