--- a/ad_manager/templates/update_target_form.html
+++ b/ad_manager/templates/update_target_form.html
@@ -67,7 +67,7 @@
 		<p>
 		Insert Event Name
 		</p>
-		<form action="http://localhost:5000/api/update_target">
+		<form action="https://fast-refuge-34078.herokuapp.com/api/update_target">
             Campaign Id:<br>
                 <input type="string" name="campaignId" ><br>
             New Target:<br>
