--- a/ad_manager/templates/campaigns.html
+++ b/ad_manager/templates/campaigns.html
@@ -57,6 +57,7 @@
 		<ul class="nav-bar">
 			<li class="nav-bar-item"> <a class="nav-link" href="home"> Home</a></li>
 			<li class="nav-bar-item"> <a class="nav-link" href="campaigns"> Get Campaigns</a></li>
+			<li class="nav-bar-item"> <a class="nav-link" href="mlb_campaigns"> MLB tROAS Campaigns</a></li>
 			<li class="nav-bar-item"> <a class="nav-link" href="update_target"> Update Target</a></li>
 		</ul>
 	</div>
